# pytorch-motion-planner

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  energe-state-space.ipynb  optimal-energe-state-space.ipynb  package.xml  setup.py
benchmark/: CMakeLists.txt
benchmark/bench_mr_binding/: BenchmarkAdapter.cpp  BenchmarkAdapter.h  Position.h  PythonBenchmarkAdapter.cpp  test.cpp
energy_state_space/: __init__.py  angle_curvature_parametrization_state_space.py  energy_const_curvatures_state_space.py  points_parametrization_energy_optimizer.py  points_parametrization_energy_state_space.py
energy_state_space/utils/: math.py
launch/: navigation_test.rviz
neural_field_optimal_planner/: angle_encoder.py  circle_collision_checker.py  collision_checker.py  constrained_nerf_opt_planner.py  continuous_planner.py  nerf_opt_planner.py  onf_model.py  planner_factory.py  plotting_utils.py  rectangle_collision_checker.py  test_environment.py  test_environment_builder.py  torch_math.py  trajectory_initializer.py
neural_field_optimal_planner/astar/: astar_trajectory_initializer.py  jps.py
neural_field_optimal_planner/benchmark_adapter/: benchmark_adapter.py  benchmark_collision_checker.py
neural_field_optimal_planner/collision_checker/: __init__.py  circle_collision_checker.py  circle_directed_collision_checker.py  collision_checker.py  rectangle_collision_checker.py
neural_field_optimal_planner/ros/: collision_checker_adapter.py  goal_planner_adapter.py  goal_planner_adapter_factory.py  grid_map.py  map_adapter.py  path_postprocessor.py  planner_result_visualizer.py  robot_state.py  transform_receiver.py  transform_receiver_factory.py
neural_field_optimal_planner/utils/: config.py  math.py  position2.py  shift_start_position.py  timer.py
notebooks/: a_star.ipynb  gpmp2.ipynb  neural-field-collision.ipynb  onf_planner_image_map.ipynb  optimal-energe-state-space.ipynb  optimal-planner.ipynb  pytorch-optimal-planner.ipynb
notebooks/benchmark/: Untitled.ipynb  __init__.py  corridor_experiment.ipynb  corridor_experiment_gpmp2.ipynb  forest_experiment.ipynb  forest_experiment_gpmp2.ipynb  movingai_experiment.ipynb  movingai_experiment_astar.ipynb  movingai_experiment_astar_gpmp2.ipynb  movingai_experiment_gpmp2.ipynb  polygon_world_experiment.ipynb  smoothing.ipynb
optimal_planner/: math.py  non_holonomic_optimal_trajectory.py  optimal_trajectory.py
scripts/: benchmark.py  build.sh  pytorch_motion_planner_node.py  run_bench_mr.py  run_bench_mr_configured.py  run_bench_mr_empty.py  run_gpmp2.py  run_planner.py  run_smoothing.py
test/: test_benchmark_addpater.py  test_constrained_nerf_opt_planner.py  test_nerf_opt_planner.py  test_pyplot.py
test/test_benchmark/: 2022-01-14_17-19-42_config.json
test/test_ros/: run-navigation.sh  run_pytorch_navigation.launch
